sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-13987: It is used to capture the Account Name and used in Slack Approval Notification.</description>
    <formula>AQS_Quote__r.SBQQ__Account__r.Name</formula>
    <label>Business Account Name</label>
    <type>Text</type>
</CustomField>