sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <description>LEM-13987: It captures the display message for users on the slack notification for in-active approval(s).</description>
    <formula>If(
  NOT(TEXT(sbaa__Status__c) = &apos;Requested&apos;),
  $Label.Slack_Notification_Validation_Message,
  &apos;&apos;
)</formula>
    <label>Alert</label>
    <type>Text</type>
</CustomField>