sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Approval_Requested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_Reason__c</fullName>
    <description>LEM-15260: It is used to store the reason for requesting approvals</description>
    <label>Approval Requested Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>