sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <description>LEM-22670: It indicates Approver Persona Group.</description>
    <formula>Text(sbaa__Rule__r.Approval_Type__c)</formula>
    <label>Approval Type</label>
    <type>Text</type>
</CustomField>