sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Approved_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Name__c</fullName>
    <description>LEM-13987: It captures the name of the user who has approved the approval.</description>
    <formula>sbaa__ApprovedBy__r.Full_Name__c</formula>
    <label>Approved By Name</label>
    <type>Text</type>
</CustomField>