sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/AQS_Quote__c.field-meta.xml
<CustomField>
    <fullName>AQS_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote that this approval pertains to</description>
    <inlineHelpText>Quote that this approval pertains to</inlineHelpText>
    <label>AQS Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>AQS_AA_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>