sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>LEM-13987: It is used to extract the Date from the created date and used in Slack Approval Notification.</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>