sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>LEM-13987: It stores the Note for users on the slack notification.</description>
    <formula>$Label.Slack_View_Record</formula>
    <label>Note</label>
    <type>Text</type>
</CustomField>