sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>LEM-13987: It is used to capture the Opportunity Name and used in Slack Approval Notification.</description>
    <formula>AQS_Quote__r.SBQQ__Opportunity2__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>