sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>LEM-13987: It is used to capture the Opportunity Owner and used in Slack Approval Notification</description>
    <formula>AQS_Quote__r.SBQQ__Opportunity2__r.Owner_Full_Name__c</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>