sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Quote_number__c.field-meta.xml
<CustomField>
    <fullName>Quote_number__c</fullName>
    <description>LEM-13987: It is used to capture the Quote number and used in Slack Approval Notification.</description>
    <formula>AQS_Quote__r.Name</formula>
    <label>Quote #</label>
    <type>Text</type>
</CustomField>