sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Quote_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total__c</fullName>
    <description>LEM-13987: It is used to capture the Quote&apos;s 'Net Amount' and used in Slack Approval Notification</description>
    <formula>AQS_Quote__r.SBQQ__NetAmount__c</formula>
    <label>Quote Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>