sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Rejected_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By_Name__c</fullName>
    <description>LEM-13987: It captures the name of the user who has rejected the approval.</description>
    <formula>sbaa__RejectedBy__r.Full_Name__c</formula>
    <label>Rejected By Name</label>
    <type>Text</type>
</CustomField>