sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <description>LEM-13987: It is used to capture the Full Name of the Approval Requestor and used in Slack Approval Notification.</description>
    <formula>CreatedBy.Full_Name__c</formula>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>