sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>LEM-13987: It is used to capture the related Approval Rule Name and used in Slack Approval Notification.</description>
    <formula>sbaa__Rule__r.Name</formula>
    <label>Rule Name</label>
    <type>Text</type>
</CustomField>