sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>LEM-13987: It is used to capture the 'Account Segment' and used in Slack Approval Notification.</description>
    <formula>TEXT(AQS_Quote__r.SBQQ__Account__r.Segment__c)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>