sfdx-source/force-app/main/default/objects/sbaa__Approval__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>LEM-13987: It is used to capture 'Account Primary Vertical' and used in Slack Approval Notification.</description>
    <formula>TEXT(AQS_Quote__r.SBQQ__Account__r.Primary_Vertical__c)</formula>
    <label>Primary Vertical</label>
    <type>Text</type>
</CustomField>