sfdx-source/force-app/main/default/objects/sbaa__Approval__c/validationRules/Franchise_Amendment_Process_Opt_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Franchise_Amendment_Process_Opt_Out</fullName>
    <active>true</active>
    <description>LEM-2049</description>
    <errorConditionFormula>IF(AQS_Quote__c = NULL, FALSE,
IF(AND(ISPICKVAL(AQS_Quote__r.Opt_In_Opt_Out_Decision__c, &apos;Opt-Out&apos;), OR(AQS_Quote__r.Opt_Out_Save_Period_days__c &lt; 1, ISNULL(AQS_Quote__r.Opt_Out_Save_Period_days__c))), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>&quot;Opt-Out Save Period (days)” is required when &quot;Franchise Amendment Process&quot; = Opt-Out.  Please update before proceeding.</errorMessage>
</ValidationRule>